--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
             <tr>
                 <th><label>Seating Options:</label></th>
                 <th><select name="seat" id="seat">
+			<option value=""disabled selected hidden>Chose Seat Type</option>
                     <option value="front-Block">front-Block</option>
                     <option value="Middle-Block">Middle-Block</option>
                     <option value="Balcony-Block">Balcony-Block</option>
