--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title style="color: red">www.BookConcerts.in</title>
+    <meta charset="windows-1252">
     <meta name="viewpoint" content="width=device-width,initial-scale=1.0"> 
     <link rel="stylesheet" href="style.css">
     
