--- a/index.html
+++ b/index.html
@@ -83,22 +83,22 @@
             <tr>
                 <th><lable>Mode of payment:</lable></th>
                 <th>
-                    <input type="radio" id="pay" name="pay" value="UPI" required>
+                    <input type="radio" id="pay" name="pay" value="UPI" required="required">
                     <label for="upi">UPI</label><br>
-                    <input type="radio" id="pay" name="pay" value="CARD" required>
+                    <input type="radio" id="pay" name="pay" value="CARD" required="required">
                     <label for="CARDS">Credit/Debit Card:</label><br>
-                    <input type="radio" id="pay" name="pay" value="NETB" required>
+                    <input type="radio" id="pay" name="pay" value="NETB" required="required">
                     <label for="NETB">NET Banking:</label>
                 </th>
                 </tr>
                 <tr>
                 <th><lable>Day and Date Slot:</lable></th>
                 <th>
-                    <input type="radio" id="day" name="day" value="FRI-24/07/2020">
+                    <input type="radio" id="day" name="day" value="FRI-24/07/2020" required="required">
                     <label for="MON">FRI-24/07/2020</label><br>
-                    <input type="radio" id="day" name="day" value="SAT-25/07/2020">
+                    <input type="radio" id="day" name="day" value="SAT-25/07/2020" required="required">
                     <label for="TUE">SAT-25/07/2020</label><br>
-                    <input type="radio" id="day" name="day" value="SUN-26/07/2020">
+                    <input type="radio" id="day" name="day" value="SUN-26/07/2020" required="required">
                     <label for="SUN">SUN-26/07/2020</label>
                 </th>
             </tr>
